--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                     app:iconGravity="textStart"
                     app:iconPadding="0dp"
                     style="@style/Widget.Material3.Button.IconButton"
-                    android:contentDescription="@string/toggle_system_apps_description" />
+                    android:contentDescription="@string/search_description" />
 
                 <!-- Заголовок -->
                 <TextView
@@ -172,26 +172,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!-- Основной контент, который будет автоматически позиционироваться под AppBarLayout -->
-    <LinearLayout
+    <!-- Контейнер для фрагмента списка приложений -->
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/windowBackground"
-            app:menu="@menu/bottom_navigation_menu" />
-
-    </LinearLayout>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
